<resources>
    <string name="app_name">ContactsList</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="business_name">Business Name</string>
    <string name="first_name_hint">Enter the First Name of the Contact</string>
    <string name="last_name_hint">Enter the Last Name of the Contact</string>
    <string name="business_name_hint">Enter the name of the Business</string>
    <string name="email_address_hint">example@domain.com</string>
    <string name="new_contact">New Contact</string>
</resources>
