<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ImageView
        android:id="@+id/contact_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:alpha=".4"
        android:src="@drawable/default_pic"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/contact_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/first_name_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/last_name"/>

    <EditText
        android:id="@+id/contact_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/last_name_hint"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/business_name"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/contact_business_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/business_name_hint"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/contact_email_address"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/email_address_hint"/>

    <ImageView
        android:id="@+id/send_message_button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/message_icon"
        android:layout_gravity="center"
         />


</LinearLayout>